--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.5.1"
   }
 }
