--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-	"name": "drawparty",
-	"private": true,
-	"version": "0.0.0",
+	"name": "drawparty-front",
+	"version": "1.0.0",
+	"description": "The front-end part of DrawParty.",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/angeluriot/DrawParty-front.git"
+	},
+	"keywords": [
+		"game",
+		"multiplayer",
+		"drawing"
+	],
+	"author": "Angel Uriot",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/angeluriot/DrawParty/issues"
+	},
+	"homepage": "https://github.com/angeluriot/DrawParty#readme",
+	"dependencies": {
+		"socket.io-client": "^4.5.1"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
@@ -19,8 +37,5 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.4",
 		"vite": "^2.9.9"
-	},
-	"dependencies": {
-		"socket.io-client": "^4.5.1"
 	}
 }
