--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"homepage": "https://github.com/angeluriot/DrawParty#readme",
 	"dependencies": {
+		"q-floodfill": "^1.3.1",
 		"socket.io-client": "^4.5.1"
 	},
 	"devDependencies": {
